flex responsive adj

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
         <div class="footer">
             <div class="bottom-divs">
-                <div>
+                <div class="box">
                     <ul>
                         <li>
                             <h3>Dropbox</h3>
@@ -61,7 +61,7 @@
                         <li class="elements">Desktop app</li>
                     </ul>
                 </div>
-                <div>
+                <div class="box">
                     <ul>
                         <li>
                             <h3>Dropbox</h3>
@@ -75,7 +75,7 @@
                         <li class="elements">Desktop app</li>
                     </ul>
                 </div>
-                <div>
+                <div class="box">
                     <ul>
                         <li>
                             <h3>Dropbox</h3>
@@ -89,7 +89,7 @@
                         <li class="elements">Desktop app</li>
                     </ul>
                 </div>
-                <div>
+                <div class="box">
                     <ul>
                         <li>
                             <h3>Dropbox</h3>
@@ -103,7 +103,7 @@
                         <li class="elements">Desktop app</li>
                     </ul>
                 </div>
-                <div>
+                <div class="box">
                     <ul>
                         <li>
                             <h3>Dropbox</h3>
